css/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

/* hamburger  ------------------------*/
#hamburger-menu-toggle-1 {
    display: none;
}

/* Styles for the 'open' state, if the checkbox is checked */
#hamburger-menu-toggle-1:checked ~ .menu {
    display: initial;
    /* see Step 3 for the rest of the styles */
}
/*------------------------------------*/

body {
    background-color: #F6FEFF;
    font-family: 'Roboto', sans-serif;
    color: #4C4C4C;
    margin: auto;
    padding: auto;
}

a { 
    text-decoration: none;
    color: #204196;
}

a:hover {
    text-decoration-line: underline;
    text-decoration-style: solid;
    outline: 6px solid rgba(255, 255, 255, 0.1);
    text-decoration-color: #204196;
}

b {
    font-weight: 500;
}

h1 {
    font-size: 36px;
    font-weight: 300;
    margin-bottom: 5px;
}

h2 {
    font-size: 30px;
    font-weight: 400;
    margin-bottom: 5px;
}

h3 {
    font-size: 24px;
    font-weight: 300;
    margin-bottom: 5px;
}

h4 {
    color: #4C4C4C;
    font-size: 20px;
    font-weight: 400;
    margin-bottom: 5px;
}

p {
    font-size: 18px;
    font-weight: 300;
}

.p-more-space {
    margin: 1em 0;
}

.header {
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100%; /* Full width */
    display: flex;
    padding: 2.5em 3em;
}

.header .logo {
    max-width: 3em;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.menu {
    display: flex;
    justify-content: flex-end;
    flex-grow: 1;
}

.menu a { /*nav bar font*/
    margin: auto 0;
    padding: 0 1.2em;

    font-size: 18px;
    font-weight: 500;
    letter-spacing: 0.1em;
    text-align: center;
}

/* content */
.wrapper {
    padding: 6em calc(15vw) 0 calc(15vw);
    display: flex;
    flex-direction: column;
}

/*hero section*/
.hero {
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 6em);
}

.hero h1 {
    max-width: 36ch;
}

.hero h3 {
    margin-top: 3em;
}

.hello {/*special font for the hello statement in index*/
	font-size: 54px;
	color: #204196;
	font-family: 'Roboto Slab', serif;
    letter-spacing: -0.005em;
    margin-top: 2em;
}

.pointer-down { 
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-top: 2em;
}
.pointer-down h4 {
    text-align: center;
    color: #204196;
}

.pointer-down img {
    align-self: center;
    margin-bottom: 13px;
}

/*generic container section*/
.container {
    margin: 1em 7.25em 0 7.25em;
}

/*a single project entry*/
.project-entry {
    margin-bottom: 2em;
    position: relative;
}

.project-entry a {
    text-decoration: none;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    color: white;
}

.project-image {
    position: relative;
    overflow: hidden;

    display: flex;
    justify-content: center;
}

.project-image img {
    max-width: 100%;
    max-height: 100%;
    transition: transform 1s;
    object-fit: contain;
}

.projects h1 {
    font-weight: 400;
    letter-spacing: -0.005em;
}

.project-text {
    position: absolute;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    background: rgba(0,0,0,.3);
    opacity: 0;
    transition: opacity .3s;

    color: white;
    text-align: center;

    display: flex;
    flex-direction: column;
    justify-content: center;
}

.project-text:hover {
    opacity: 100%;
    transition: opacity .3s;
}

/*two-column div*/
.two-column {
    display: flex;
    margin-bottom: 1em;
}

.two-column img {
    margin-left: 1.5em;
    max-width: 30%;

    flex-grow: 1;
    align-self: start;
}

/*about page contact links - custom spacing*/
.contact-link {
    margin-right: 1em;
}

/*a section in the about page*/
.abt-section {
    margin-top: 2em;
    margin-bottom: 2em;
    margin-right: -18em;
}

.skill-column {
    margin-right: 7em;
}

/*generic flex box*/
.flex-box-row {
    display: flex;
}

/*coop page stuff */
.coop-section {
    margin: 2em 0;
}

/*projects page stuff*/
.project-image {
    margin: 1em 0;
}

.project-image img {
    width: 100%;
    height: auto;
}

.image-grid {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.image-grid img {
    width: 32%;
    margin-bottom: 1em;
}

.bottom-nav {
    margin-top: 3em;
    display: flex;
    justify-content: space-between;
}

/*footer*/
.footer {
    display: flex;
    justify-content: center;
    margin-top: 2em;
    margin-bottom: 2em;
}

.footer p {
    font-size: 14px;
    color: #204196;
}

@media only screen and (max-width: 991px){
    .header {
        padding: 2em 2em;
    }
    
    .header .logo {
        max-width: 2.5em;
    }

    .menu a {
        padding: 0 1em;
        font-size: 18px;
    }

    /*fonts*/
    h1 {
        font-size: 28px;
    }
    
    h2 {
        font-size: 24px;
    }
    
    h3 {
        font-size: 20px;
    }
    
    h4 {
        font-size: 18px;
    }
    
    p {
        font-size: 16px;
    }

    /* content */
    .wrapper {
        padding: 6em calc(20vw) 0 calc(20vw);
    }
    
    .hello {/*special font for the hello statement in index*/
        font-size: 36px;
    }

    /*generic container section*/
    .container {
        margin: 1em 0 0 0;
    }

    /*about page*/
    .two-column img {
        max-width: 40%;
    }

    .abt-section {
        margin-right: -14em;
    }

    .skill-column {
        margin-right: 5em;
    }

    /*projects stuff*/
    .image-grid img {
        width: 48%;
        margin-bottom: 1em;
    }
}

@media only screen and (max-width: 767px){
    /* hamburger  ------------------------*/
    .sidebar {
        display: none;
    }

    .menu-toggle {
    display: initial; /* display the toggle, previously hidden */
    }
    /*--------------------------------------*/

    .menu a {
        padding: 0 .6em;
        font-size: 16px;
    }

    /*fonts*/
    h1 {
        font-size: 26px;
    }
    
    h2 {
        font-size: 22px;
    }
    
    h3 {
        font-size: 18px;
    }
     
   h4 {
       font-size: 16px;
   }

    /*p is the same as above*/

    /* content */
    .wrapper {
        padding: 6em calc(8vw) 0 calc(8vw);
    }

    .hero {
        min-height: auto;
    }

    .hello {
        margin-top: 2em;
    }

    .pointer-down { 
        margin-top: 3em; 
    }

    /*about page*/
    /*two-column div*/
    .two-column {
        margin-bottom: 4em;
    }

    .two-column img {
        max-width: 50%;
    }

    .abt-section {
        margin-right: 0;
    }
    
    .flex-box-row{
        flex-wrap: wrap;
    }

    .skill-column {
        margin-right: 1.5em;
    }
}

